# clash

./: .env.example  .eslintrc.cjs  .gitignore  .npmrc  .pre-commit-config.yaml  AGENTS.md  AGENT_LORO_INTEGRATION_COMPLETE.md  ARCHITECTURE.md  AUTO_LAYOUT_GUIDE.md  D1_SETUP_GUIDE.md  DEPLOYMENT.md  FINAL_SUMMARY.md  Instruction.md  MIGRATION_COMPLETE.md  Makefile  PRODUCT_VISION_DRAFT.md  PROJECT_OVERVIEW.md  PROJECT_PROPOSAL.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_START_TEST.md  R2_SETUP_GUIDE.md  README.md  README_LORO_INTEGRATION.md  REFACTOR_SUMMARY.md  SETUP.md  SETUP_GUIDE.md  TEST_FRONTEND_LORO.md  TEXT_NODES_GUIDE.md  TROUBLESHOOTING.md  agents.json  agents.py  asset_agent.py  config.py  diagnose.py  example_workflow.py  image_generation.py  main.py  models.py  package-lock.json  (+16 more)
.agent/rules/: model-choose-specific.md
.changeset/: README.md
.claude/: settings.json
.github/workflows/: ci.yml  deploy-cloudflare.yml  deploy.yml  release.yml  test.yml
.history/: video_production_20251125203736.py  video_production_20251125204658.py
apps/api/: .env.example  AGENT_INTEGRATION_GUIDE.md  Dockerfile  LORO_MIGRATION_GUIDE.md  Makefile  README.md  README_OLD.md  SERVICES_API_REFERENCE.md  VIDEO_ANALYSIS_EXAMPLE.md  agents.json  all_chunks_debug.txt  analyze_video_with_gemini.py  docker-compose.yml  pyproject.toml  test_e2e_render.py  test_loro_sync.py  test_minimax_tts.py  test_pg_checkpointer.py  test_render.py  test_services.py  test_video_analysis.py  verify_fix.py  verify_loro.py
apps/auth-gateway/: README.md  agents.json  package.json  tsconfig.json  wrangler.toml
apps/loro-sync-server/: ARCHITECTURE.md  LORO_SCHEMA.md  README.md  TASK_POLLING_ARCHITECTURE.md  agents.json  (+5 more)
backend/: .dockerignore  .env.example  .gitignore  CLIP_KEYFRAMES_EXAMPLE.md  D1_CHECKPOINT_SUMMARY.md  KLING_INTEGRATION_SUMMARY.md  Makefile  QUICKSTART_CHECKPOINTING.md  README.md  example_semantic_id_usage.py  first_chunk_debug.txt  pyproject.toml  reproduce_issue.py  simulation_output.json  test_d1_connection.py  test_deep_agent.py  test_output.txt  test_semantic_id.py  tset.ipynb  verify_setup.py  wrangler.toml
backend/.history/: video_production_20251125204627.py
backend/docs/: D1_INTEGRATION.md  Instruction.md  kling_kie_usage.md  kling_video_guide.md
backend/examples/: kling_video_example.py
backend/scripts/: init_database.py  test_workspace_manual.py
backend/src/master_clash/: config.py  context.py  models.py  prompts.py  utils.py
backend/src/master_clash/agents/: art_director_agent.py  director_agent.py
backend/src/master_clash/api/: main.py
backend/src/master_clash/database/: __init__.py  checkpointer.py  connection.py  d1_checkpointer.py  di.py  sqlite_client.py
backend/src/master_clash/database/adapters/: d1_adapter.py  postgres_adapter.py
backend/src/master_clash/migrations/postgres/: __init__.py
backend/src/master_clash/semantic_id/: d1_checker.py  db_integration.py  generator.py  wordlists.py
backend/src/master_clash/tools/: __init__.py  kling.py  kling_video.py  nano_banana.py
backend/src/master_clash/video_analysis/: README.md  __init__.py  asr.py  gemini_video.py  keyframes.py  keyframes_advanced.py  keyframes_clip.py  keyframes_pyscenedetect.py  models.py  subtitles.py
backend/src/master_clash/workflow/: ARCHITECTURE_SUMMARY.md  CHANGELOG.md  FINAL_SUMMARY.md  INTEGRATION.md  QUICK_REFERENCE.md  README.md  WORKSPACE_SCOPING.md  __init__.py  backends.py  graph.py  middleware.py  multi_agent.py  state.py  subagents.py  tools.py
backend/tests/: __init__.py  test_llm_connection.py  test_utils.py  test_workspace_scoping.py
docs/: AGENTS_JSON_SPEC.md  agents.json  agents.md  group-logic-7ef9.md  loro-crdt-explained.md  loro-sync-python-improvements.md  video-optimization.md  video-thumbnail-implementation.md
frontend/: CLAUDE.md  Dockerfile  README.md  auth.ts  docker-compose.yml  drizzle.local.config.ts  next.config.ts  package-lock.json  package.json  test-nano-banana-simple.ts  wrangler.toml  回忆罐脚本.csv  摇篮第一集.csv  摇篮第一集.xlsx
output/: script.json
scripts/: check_agents_docs.py  setup-d1.sh  setup.js  start.js
(+369 files in other folders)
