[project]
name = "master-clash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.52.0",
    "ipykernel>=7.1.0",
    "langchain>=1.0.3",
    "langchain-google-genai>=3.2.0",
    "langchain-openai==1.0.3",
    "langgraph>=1.0.3",
    "openai>=0.27.10",
    "pandas>=2.3.3",
    "pip>=25.3",
    "pydantic>=2.12.4",
]
